# World_gcolor3

./: .gitlab-ci.yml  meson.build  org.gnome.design.ColorPicker.json
data/: color-row.ui  color-selection.ui  colpicker.gresource.xml  gcolor3.gresource.xml  meson.build  org.gnome.design.ColorPicker.appdata.xml.in  org.gnome.design.ColorPicker.desktop.in  shortcuts.ui  window.ui
po/: POTFILES.in
src/: colpicker-application.c  colpicker-application.h  colpicker-color-item.c  colpicker-color-item.h  colpicker-color-row.c  colpicker-color-row.h  colpicker-color-selection.c  colpicker-color-selection.h  colpicker-color-store.c  colpicker-color-store.h  colpicker-hsv.c  colpicker-hsv.h  colpicker-window.c  colpicker-window.h  gcolor3-color-selection.c  gcolor3-color-selection.h  gcolor3-window.c  main.c  meson.build
